[tool.poetry]
name = "gradients-visualization"
version = "0.1.0"
description = ""
authors = ["Maxim Vasilev <Maxim.Vasilev@jetbrains.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.2"
numpy = "^1.19.2"
torch = "^1.6.0"
parsimonious = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
